--- a/app/app.html
+++ b/app/app.html
@@ -3,11 +3,26 @@
 </head>
 
 <body>
-  {{> hello}}
+  {{>piTest}}
 </body>
 
-<template name="hello">
-  <h1>Hello World!</h1>
-  {{greeting}}
-  <input type="button" value="Click" />
+
+
+
+<template name="piTest">
+
+
+
+<div class="piTest">
+
+<button class="start" >start</button><br />
+<p class="steps"></p>
+<p class="pi"></p>
+	<canvas width="200" height="200">
+
+	</canvas>
+
+
+</div>
+
 </template>
