--- a/app/client/millerRabin.html
+++ b/app/client/millerRabin.html
@@ -5,9 +5,12 @@
 			<h3 class="panel-title">Miller Rabin</h3>
 		</div>
 		<div class="panel-body">
-			<textarea class="candidate"></textarea>
+
+			<button class="btn btn-primary step"><span class="glyphicon glyphicon-step-forward"></span> Step</button>
+			<br />
+			<br />
 			
-			<button class="btn step">step</button>
+			<textarea class="candidate"></textarea>
 			
 
 		
@@ -29,8 +32,11 @@
 <template name="millerRabinStats">
 	<dl class="dl-horizontal">
 	<dt>length of candidate:</dt><dd>{{candidateLength}}</dd>
-	<dt>Victim to test: </dt><dd class="victim">{{victim}}</dd>
-	<dt>Probability of composite:</dt><dd>{{probabilityForComposite}}</dd>
+	<dt>Tests done:</dt><dd>{{numberOfTests}}</dd>
+	<dt>latest runtime:</dt><dd>{{latestRuntime}}</dd>
+	<dt>Victim tested: </dt><dd class="victim">{{victim}}</dd>
+	<dt>Prob. of composite:</dt><dd>{{probabilityForComposite}}</dd>
+	<dt>Prob. of prime:</dt><dd>{{probabilityForPrime}}</dd>
 	</dl>
 </template>
 
