--- a/app/client/piTest.html
+++ b/app/client/piTest.html
@@ -5,7 +5,7 @@
 			<h3 class="panel-title">Buffonsches Nadelproblem</h3>
 		</div>
 		<div class="panel-body">
-			<button class="start" >start</button><br />
+			<button class="btn btn-primary start" ><span class="glyphicon glyphicon-step-forward"></span> start / stop</button><br />
 			<p class="steps"></p>
 			<p class="pi"></p>
 			<canvas width="200" height="200">
