--- a/app/client/app.html
+++ b/app/client/app.html
@@ -9,8 +9,17 @@
 <h1>Randomisierte Algorithmen</h1>
 </div>
 	<div class="container">
-			{{>millerRabin}}
+		<div class="row">
+		<div class="col-sm-12">
+		{{>millerRabin}}
+		</div>
+		</div>
+		<div class="row">
+			<div class="col-sm-6">
 		{{>piTest}}
+		</div>
+	
+		</div>
 	
 	</div>
 </body>
