--- a/app/client/millerRabin.html
+++ b/app/client/millerRabin.html
@@ -34,7 +34,7 @@
 	<dt>length of candidate:</dt><dd>{{candidateLength}}</dd>
 	<dt>Tests done:</dt><dd>{{numberOfTests}}</dd>
 	<dt>latest runtime:</dt><dd>{{latestRuntime}}</dd>
-	<dt>Victim tested: </dt><dd class="victim">{{victim}}</dd>
+	<dt>Witness tested: </dt><dd class="witness">{{witness}}</dd>
 	<dt>Prob. of composite:</dt><dd>{{probabilityForComposite}}</dd>
 	<dt>Prob. of prime:</dt><dd>{{probabilityForPrime}}</dd>
 	</dl>
