--- a/app/client/app.html
+++ b/app/client/app.html
@@ -9,17 +9,33 @@
 <h1>Randomisierte Algorithmen</h1>
 </div>
 	<div class="container">
+<h2>Monte-Carlo Simulation</h2>
+	<div class="row">
+			<div class="col-sm-6">
+		{{>piTest}}
+		</div>
+		
+	
+		</div>
+
+<h2>Primes</h2>
+<div class="row">
+		<div class="col-sm-12">
+		{{>deterministicPrime}}
+		</div>
+		</div>
 		<div class="row">
 		<div class="col-sm-12">
 		{{>millerRabin}}
 		</div>
 		</div>
+
 		<div class="row">
-			<div class="col-sm-6">
-		{{>piTest}}
+		<div class="col-sm-12">
+		{{>millerRabinRuntime}}
+		</div>
 		</div>
 	
-		</div>
 	
 	</div>
 </body>
