--- a/app/client/app.html
+++ b/app/client/app.html
@@ -5,38 +5,46 @@
 </head>
 
 <body>
-<div class="container hero-unit">
-<h1>Randomisierte Algorithmen</h1>
-</div>
+	<div class="container hero-unit">
+		<h1>Randomisierte Algorithmen</h1>
+	</div>
 	<div class="container">
-<h2>Monte-Carlo Simulation</h2>
-	<div class="row">
+		<h2>Monte-Carlo Simulation</h2>
+		<div class="row">
 			<div class="col-sm-6">
-		{{>piTest}}
-		</div>
-		
-	
+				{{>piTest}}
+			</div>
+
+
 		</div>
 
-<h2>Primes</h2>
-<div class="row">
-		<div class="col-sm-12">
-		{{>deterministicPrime}}
+		<h2>Random Quicksort</h2>
+
+		<div class="row">
+			<div class="col-sm-12">
+				{{>quicksort}}
+			</div>
 		</div>
+
+		<h2>Primes</h2>
+		<div class="row">
+			<div class="col-sm-12">
+				{{>deterministicPrime}}
+			</div>
 		</div>
 		<div class="row">
-		<div class="col-sm-12">
-		{{>millerRabin}}
-		</div>
+			<div class="col-sm-12">
+				{{>millerRabin}}
+			</div>
 		</div>
 
 		<div class="row">
-		<div class="col-sm-12">
-		{{>millerRabinRuntime}}
+			<div class="col-sm-12">
+				{{>millerRabinRuntime}}
+			</div>
 		</div>
-		</div>
-	
-	
+
+
 	</div>
 </body>
 
