--- a/app/client/millerRabin.html
+++ b/app/client/millerRabin.html
@@ -10,6 +10,7 @@
 			<br />
 			<br />
 			<p>Candidate to test:</p>
+			{{>samples}}
 			<textarea class="candidate"></textarea>
 			
 
@@ -23,7 +24,7 @@
 			{{>millerRabinChart}}
 			</div>
 
-			<p><a target="_blank" href="http://primes.utm.edu/curios/page.php?number_id=9494">long primes</a></p>
+			<p><a target="_blank" href="http://primes.utm.edu/curios/index.php?start=1001">long primes</a></p>
 
 		</div>
 	</div>
