--- a/app/client/app.html
+++ b/app/client/app.html
@@ -5,12 +5,13 @@
 </head>
 
 <body>
+<a href="https://github.com/macrozone/random_alg"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_orange_ff7600.png" alt="Fork me on GitHub"></a>
 	<div class="container hero-unit">
 		<h1>Randomisierte Algorithmen</h1>
 	</div>
 	<div class="container">
 		<h2>Monte-Carlo Simulation</h2>
-		<div class="row">
+		<div class="row experiment">
 			<div class="col-sm-6">
 				{{>piTest}}
 			</div>
@@ -20,25 +21,25 @@
 
 		<h2>Random Quicksort</h2>
 
-		<div class="row">
+		<div class="row experiment">
 			<div class="col-sm-12">
 				{{>quicksort}}
 			</div>
 		</div>
 
 		<h2>Primes</h2>
-		<div class="row">
+		<div class="row experiment">
 			<div class="col-sm-12">
 				{{>deterministicPrime}}
 			</div>
 		</div>
-		<div class="row">
+		<div class="row experiment">
 			<div class="col-sm-12">
 				{{>millerRabin}}
 			</div>
 		</div>
 
-		<div class="row">
+		<div class="row experiment">
 			<div class="col-sm-12">
 				{{>millerRabinRuntime}}
 			</div>
