--- a/app/client/millerRabin.html
+++ b/app/client/millerRabin.html
@@ -10,7 +10,8 @@
 			<br />
 			<br />
 			<p>Candidate to test:</p>
-			{{>samples}}
+			
+			Samples: {{>samples}} (<a target="_blank" href="http://primes.utm.edu/curios/index.php?start=1001">you find other large prime numbers here</a>)
 			<textarea class="candidate"></textarea>
 			
 
@@ -24,7 +25,7 @@
 			{{>millerRabinChart}}
 			</div>
 
-			<p><a target="_blank" href="http://primes.utm.edu/curios/index.php?start=1001">long primes</a></p>
+			
 
 		</div>
 	</div>
