--- a/app/client/deterministicPrime.html
+++ b/app/client/deterministicPrime.html
@@ -14,7 +14,7 @@
 		<div class="row">
 		<div class="col-sm-6">
 		<p>Candidate to test:</p>
-		{{>samples}}
+		Samples: {{>samples}}
 		<textarea class="candidate"></textarea>
 
 		</div>
