--- a/app/client/app.html
+++ b/app/client/app.html
@@ -11,7 +11,7 @@
 	</div>
 	<div class="container">
 		<h2>Monte-Carlo Simulation</h2>
-		<div class="row experiment">
+		<div id="piTest" class="row experiment">
 			<div class="col-sm-6">
 				{{>piTest}}
 			</div>
@@ -21,25 +21,25 @@
 
 		<h2>Random Quicksort</h2>
 
-		<div class="row experiment">
+		<div id="quicksort" class="row experiment">
 			<div class="col-sm-12">
 				{{>quicksort}}
 			</div>
 		</div>
 
 		<h2>Primes</h2>
-		<div class="row experiment">
+		<div id="deterministicPrime" class="row experiment">
 			<div class="col-sm-12">
 				{{>deterministicPrime}}
 			</div>
 		</div>
-		<div class="row experiment">
+		<div id="millerRabin" class="row experiment">
 			<div class="col-sm-12">
 				{{>millerRabin}}
 			</div>
 		</div>
 
-		<div class="row experiment">
+		<div id="millerRabinRuntime" class="row experiment">
 			<div class="col-sm-12">
 				{{>millerRabinRuntime}}
 			</div>
