--- a/app/client/app.html
+++ b/app/client/app.html
@@ -27,7 +27,7 @@
 			</div>
 		</div>
 
-		<h2>Primes</h2>
+		<h2 id="primes">Primes</h2>
 		<div id="deterministicPrime" class="row experiment">
 			<div class="col-sm-12">
 				{{>deterministicPrime}}
